[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Tileset/terrainTiles_default.png" type="Texture" id=1]
[ext_resource path="res://Assets/Entities/treeGreen_large.png" type="Texture" id=2]
[ext_resource path="res://Assets/Entities/treeBrown_large.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/pause.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Maps/Map1.gd" type="Script" id=5]
[ext_resource path="res://Assets/UI/blue_button08.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/blue_button10.png" type="Texture" id=7]
[ext_resource path="res://Assets/Towers/towerDefense_tile249.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/blue_button12.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Maps/HUD.gd" type="Script" id=10]
[ext_resource path="res://Assets/UI/forward.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/button1.png" type="Texture" id=12]
[ext_resource path="res://Assets/UI/button2.png" type="Texture" id=13]

[sub_resource type="TileSet" id=1]
0/name = "terrainTiles_default.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 128 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "terrainTiles_default.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 0, 384, 128 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 146, Vector2( 1, 0 ), 56, Vector2( 1, 1 ), 186, Vector2( 2, 0 ), 178, Vector2( 2, 1 ), 176, Vector2( 3, 0 ), 154, Vector2( 3, 1 ), 152, Vector2( 4, 0 ), 58, Vector2( 4, 1 ), 50, Vector2( 5, 0 ), 184, Vector2( 5, 1 ), 26 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "treeBrown_large.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": null,
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "treeGreen_large.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( -24, -2, 24, 2, -33, 609, -23.3345, 1.41421, 23.3345, -1.41421, 264, 608, 0, 0, 0, 0, 288, 582, 0, 0, 0, 0, 288, 256, -36.0624, 0.353553, 36.0624, -0.353553, 320, 225, -35.0018, 0, 35.0018, 0, 450, 225, 0, 0, 0, 0, 480, 257, -0.353553, -25.8094, 0.353553, 25.8094, 480, 392, 0, 0, 0, 0, 512, 416, 0, 0, 0, 0, 639, 415, 1.06066, 46.6691, -1.06066, -46.6691, 672, 375, 0, 0, 0, 0, 671, 128, -37.1231, 0, 37.1231, 0, 706, 96, -35.0018, 0, 35.0018, 0, 960, 96, 0, 0, 0, 0, 993, 129, -0.707107, -27.9307, 0.707107, 27.9307, 992, 518, 0, 0, 0, 0, 1024, 544, 0, 0, 0, 0, 1151, 544, -0.353553, 36.7696, 0.353553, -36.7696, 1184, 512, 0, 0, 0, 0, 1183, 129, -37.4767, -0.353553, 37.4767, 0.353553, 1216, 97, 0, 0, 0, 0, 1315, 96 )
}

[node name="Map1" type="Node2D"]
script = ExtResource( 5 )

[node name="Ground" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0 )

[node name="Entities" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 13, 2, 0, 17, 1, 0, 65539, 1, 0, 65544, 1, 0, 65546, 0, 65538, 65547, 0, 1, 65548, 0, 1, 65549, 0, 1, 65550, 0, 1, 65551, 0, 65539, 65554, 0, 65538, 65555, 0, 1, 65556, 0, 1, 65557, 0, 0, 131082, 0, 0, 131087, 0, 0, 131090, 0, 0, 196612, 0, 65538, 196613, 0, 1, 196614, 0, 1, 196615, 0, 65539, 196616, 2, 0, 196618, 0, 0, 196620, 2, 0, 196623, 0, 0, 196626, 0, 0, 262148, 0, 0, 262151, 0, 0, 262154, 0, 0, 262159, 0, 0, 262161, 1, 0, 262162, 0, 0, 327684, 0, 0, 327686, 1, 0, 327687, 0, 0, 327690, 0, 0, 327695, 0, 0, 327698, 0, 0, 393219, 2, 0, 393220, 0, 0, 393223, 0, 65540, 393224, 0, 1, 393225, 0, 1, 393226, 0, 65541, 393230, 2, 0, 393231, 0, 0, 393234, 0, 0, 458756, 0, 0, 458767, 0, 0, 458770, 0, 0, 524292, 0, 0, 524303, 0, 65540, 524304, 0, 1, 524305, 0, 1, 524306, 0, 65541, 655358, 0, 0, 655359, 0, 1, 589824, 0, 1, 589825, 0, 1, 589826, 0, 1, 589827, 0, 1, 589828, 0, 65541, 589833, 1, 0, 589838, 1, 0, 655365, 2, 0, 655380, 1, 0 )

[node name="Towers" type="Node2D" parent="."]

[node name="Path" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 10 )

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="InformationPanel" type="ColorRect" parent="UI/HUD"]
anchor_bottom = 1.0
margin_right = 150.0
color = Color( 0.215686, 0.215686, 0.215686, 1 )

[node name="BuildBar" type="VBoxContainer" parent="UI/HUD/InformationPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -120.0
rect_min_size = Vector2( 150, 0 )

[node name="BtnGunT1" type="TextureButton" parent="UI/HUD/InformationPanel/BuildBar"]
margin_left = 25.0
margin_right = 125.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 4
size_flags_vertical = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 9 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/InformationPanel/BuildBar/BtnGunT1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 8 )
expand = true

[node name="ControlBar" type="HBoxContainer" parent="UI/HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -80.0
rect_min_size = Vector2( 0, 60 )

[node name="BtnPlayPause" type="TextureButton" parent="UI/HUD/ControlBar"]
margin_top = 10.0
margin_right = 60.0
margin_bottom = 70.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 4 )

[node name="BtnSpeedUp" type="TextureButton" parent="UI/HUD/ControlBar"]
margin_left = 64.0
margin_top = 10.0
margin_right = 124.0
margin_bottom = 70.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )

[connection signal="pressed" from="UI/HUD/InformationPanel/BuildBar/BtnGunT1" to="UI" method="_on_BtnGunT1_pressed"]
[connection signal="pressed" from="UI/HUD/ControlBar/BtnPlayPause" to="UI" method="_on_BtnPlayPause_pressed"]
[connection signal="pressed" from="UI/HUD/ControlBar/BtnSpeedUp" to="UI" method="_on_BtnSpeedUp_pressed"]
